<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mixare</string>
    <string name="search_hint">Search Location</string>
    
    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>
    
    <string name="OSM">Openstreetmap</string>
    <string name="MIXARE">Mixare</string>
    <string name="TWITTER">Twitter</string>
    <string name="PANORAMIO">Panoramio</string>
    <string name="WIKIPEDIA">Wikipedia</string>
    <string name="ARENA">Arena</string>
	<string name="CUSTOM">Custom</string>
    
    <string name="CIRCLE_MARKER">Circles</string>
    <string name="NAVIGATION_MARKER">Arrows</string>
    <string name="IMAGE_MARKER">Images</string>
    
    <string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>
	<string name="option_not_available">Sorry, We are working on it&#8230; \nThis option will be available soon!</string>

	<string name="license">Copyright &#169; 2010- Peer internet solutions 
		\n\nThis program is free software: 	you can redistribute it and/or modify it under the terms of the 
		GNU General Public License as published by the Free Software Foundation, either version 3 of the License, 
		or at your option) any later version. 
		\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even 
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public 
		License for more details. 
		\n\n You should have received a copy of the GNU General Public License along with this program. 
		If not, see &lt;http://www.gnu.org/licenses/&gt;
	</string>
	
	<string name="launch_plugins">Launch plugins?</string>
	<string name="plugin_message">Some plugins have changed, do you want to see the List of Plugins?</string>
	<string name="remember_this_decision">Remember this decision</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
		
	<string name="menu_item_1">Data Source</string>
	<string name="menu_item_2">Plugins</string>
	<string name="menu_item_3">List view</string>
	<string name="menu_item_4">Map view</string>
	<string name="menu_item_5">Zoom level</string>
	<string name="menu_item_6">Search</string>
	<string name="menu_item_7">Info</string>
	<string name="menu_item_8">License</string>

	<string name="cancel">Cancel</string>

	<string name="data_source_edit_err">This data source cannot be edited.</string>
	<string name="data_source_delete_err">This data source cannot be deleted.</string>

	<string name="connection_error_dialog">Sorry, a connection Error occured! \nPlease check if you are connected to the Internet.</string>
	<string name="gps_error_dialog">GPS ERROR</string>
	<string name="unsupportet_hardware_dialog">Mixare had a problem with finding the matching sensors. Make sure your phone has the needed sensors.</string>
	<string name="general_error_dialog">Mixare had a problem. Please report this error.</string>
	<string name="connection_error_dialog_button1">Retry</string>
	<string name="connection_error_dialog_button2">Open Settings</string>
	<string name="connection_error_dialog_button3">Close App</string>

	<string name="connection_GPS_dialog_text">The GPS location can not be updated&#8230; \nIf you continue it could be that the Information 
		\nwill not be displayed in the right place.</string>
	<string name="connection_GPS_dialog_button1">Continue</string>
	<string name="connection_GPS_dialog_button2">Close</string>

	<string name="no_website_available">Sorry, there is no further \ninformation available.</string>

	<string name="license_title">License</string>
	<string name="close_button">Close</string>
	<string name="general_info_title">General Information</string>

	<string name="general_info_text">GPS info: </string>
	<string name="longitude">Longitude: </string>
	<string name="latitude">Latitude: </string>
	<string name="altitude">Altitude: </string>
	<string name="speed">Speed: </string>
	<string name="accuracy">Accuracy: </string>
	<string name="gps_last_fix">Last GPS fix: </string>

	<string name="map_menu_normal_mode">Map</string>
	<string name="map_menu_satellite_mode">Satellite</string>
	<string name="map_menu_map_osm">Open Street Map</string>
	<string name="map_menu_map_google">Google Maps</string>
	<string name="map_menu_cam_mode">Camera</string>
	<string name="map_my_location">My Location</string>
	<string name="map_toggle_path_on">Show Path</string>
	<string name="map_toggle_path_off">Hide Path</string>
	
	<string name="map_current_location_click">Your current location</string>

	<string name="data_source_add">Add data source</string>
	<string name="data_source_edit">Edit data source</string>
	<string name="data_source_delete">Delete data source</string>
	<string name="data_source_change_wikipedia">Changed to Wikipedia as data source</string>
	<string name="data_source_change_twitter">Changed to Twitter as data source</string>
	<string name="data_source_change_osm">Changed to OpenStreetMap as data source</string>

	<string name="search_failed_notification">No search results</string>
	<string name="source_openstreetmap">Stations around</string>

	<string name="search_active_1">Search on data source</string>
	<string name="search_active_2">. Touch to terminate search</string>
	<string name="download_error">Error while downloading</string>
	<string name="download_received">Received data from</string>

	<string name="add_osm_menu">Add OpenStreetMap URL</string>
	<string name="insert_osm_url">Insert OpenStreetMap URL</string>
	<string name="osm_max_object_menu">Set max POI per URL</string>
	<string name="set_osm_max_object">Maximum POIs per URL</string>
	<string name="location_not_found">Location not found, make sure you enabled Wifi location or GPS in the settings.</string>
	<string name="refreshing">Refreshing</string>
	<string name="select_plugin">Find new Plugins</string>

	<string name="plugins_changed">Activation of Plugins changed. Mixare has to restart to change plugins. Would you like to do that now?</string>
	<string name="select_all">Select all</string>
	<string name="deselect_all">Deselect all</string>
	<string name="reload_plugins">Reload Plugins</string>
	
	<string name="bootstrap1">Splashscreen</string>
	<string name="bootstrap2">Bootstrap</string>
	<string name="marker">Marker</string>
	<string name="dataselector">Dataselector</string>
	<string name="datahandler">Datahandler</string>
	
	<string name="list_view_total_markers">Total markers: </string>
	<string name="list_view_marker_in_section">Markers:</string>
	<string name="list_view_search_no_result">No result found</string>
	<string name="list_view_no_plugins_available">No plugins installed</string>
	<string name="list_view_search_hint">Search</string>
	
	<string name="add_datasource">Add Datasource</string>
	<string name="datasource_list">Datasources</string>
	<string name="plugin_list">Plugins</string>
	<string name="mix_list_view">Markerlist</string>
	
	<string name="list_view_section"></string>
	<string name="list_view_entry"></string>
	<string name="list_view_webview_id"></string>
	
	<string name="none">None</string>
	<string name="add_random">Add Random Distance</string>
	<string name="truncate">Truncate GPS location</string>
		
	<string name="location_preference">Location</string>
	<string name="bounding_box_summary">Bounding Box Summary</string>
	<string name="bounding_box_title">Bounding Box Title</string>
	<string name="bounding_box_list_summary">Bounding Box List Summary</string>
	<string name="bounding_box_list_title">Bounding Box List Title</string>
	<string name="location_summary">Location Summary</string>
	<string name="location_title">Location Title</string>
	<string name="edittext_latitude_title">Latitude</string>
	<string name="edittext_latitude_summary">Latitude Summary</string>
	<string name="edittext_longitude_title">Longitude</string>
	<string name="edittext_longitude_summary">Longitude Summary</string>
	<string name="edittext_altitude_title">altitude</string>
	<string name="edittext_altitude_summary">altitude Summary</string>
	<string name="edittext_radius_title">radius</string>
	<string name="edittext_radius_summary">radius Summary</string>
	<string name="seekbar_maxradius_summary">MaxRadius Summary</string>
	<string name="seekbar_maxradius_title">MaxRadius</string>
	<string name="edittext_locale_title">Locale</string>
	<string name="edittext_locale_summary">radius Summary</string>
	<string name="additional_params_preferences">Additional Params</string>
	<string name="edittext_add_title">Add</string>
	<string name="edittext_add_summary">Add</string>

	<string name="key">Param name</string>
	<string name="value">Param value</string>
	
	<string name="save">Save</string>
	<string name="XML">XML</string>
	<string name="JSON">JSON</string>
	<string name="default_string">Default</string>
		
	<string name="dataprocessor_category_title_type">Type</string>
	<string name="dataprocessor_category_title_tags">Tags</string>
	<string name="dataprocessor_type_list_title">Type</string>
	<string name="dataprocessor_type_list_summary">Type summary</string>
	<string name="edittext_xml_parser_title">Xml Parser</string>
	<string name="edittext_xml_parser_summary">Xml Parser summary</string>
	<string name="edittext_id_title">ID</string>
	<string name="edittext_id_summary">ID summary</string>
	<string name="edittext_title_title">title</string>
	<string name="edittext_title_summary">title summary</string>
	<string name="edittext_lat_title">lat</string>
	<string name="edittext_lat_summary">lat summary</string>
	<string name="edittext_lon_title">lon</string>
	<string name="edittext_lon_summary">lon summary</string>
	<string name="edittext_alt_title">alt</string>
	<string name="edittext_alt_summary">alt summary</string>
	<string name="edittext_detail_page_title">detail_page</string>
	<string name="edittext_detail_page_summary">detail_page summary</string>
	<string name="edittext_url_title">url</string>
	<string name="edittext_url_summary">url summary</string>
	<string name="edittext_image_title">image</string>
	<string name="edittext_image_summary">image summary</string>
	<string name="edittext_root_title">root</string>
	<string name="edittext_root_summary">root summary</string>
</resources>
